Fixing spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@ html, body, #root {
   background-repeat: no-repeat;
 
   h1{
-    padding-top: 80px;
+    padding-top: 50px;
     text-align: center;
     color: $light-color;
   }
